# tf_snmp

./: .gitignore  Makefile  README.md
src/: CMakeLists.txt  main_snmp.c  tf_snmp_module.h  utils.c  utils.h  version.c.in  version.h  version.h.in
src/tf_snm_test/: snmp_main_test.c
src/tf_snmp_statistics/: main_snmp.c  tf_snmp_module.c  tf_snmp_module.h  utils.c  utils.h
src/tf_snmp_statistics/configPSW/: configPSW_main.c  configPSW_main.h
src/tf_snmp_statistics/configPSW/autoRestart/: autoRestart_main.c  autoRestart_main.h
src/tf_snmp_statistics/configPSW/outStatePSW/: outStatePSW_main.c  outStatePSW_main.h
src/tf_snmp_statistics/configPSW/portPoe/: portPoE_main.c  portPoE_main.h
src/tf_snmp_statistics/poeStatus/: poeStatus_main.c  poeStatus_main.h  poe_handlers.c  poe_handlers.h
src/tf_snmp_statistics/statusPSW/: statusPSW_main.c  statusPSW_main.h
src/tf_snmp_statistics/statusPSW/autoRestartErrors/: autoRestartErrors_maiin.c  autoRestartErrors_maiin.h
src/tf_snmp_statistics/statusPSW/fwStatus/: fwStatus_main.c  fwStatus_main.h
src/tf_snmp_statistics/statusPSW/inputStatus/: inputStatus_main.c  inputStatus_main.h
src/tf_snmp_statistics/statusPSW/poeStatus/: poeStatus_main.c  poeStatus_main.h  poe_handlers.c  poe_handlers.h
src/tf_snmp_statistics/statusPSW/sensorEntry/: sensorEntry.c  sensorEntry.h
src/tf_snmp_statistics/statusPSW/sfpStatus/: sfpStatus.c  sfpStatus.h
src/tf_snmp_statistics/statusPSW/upsStatus/: ups_status_main.c  ups_status_main.h
src/tf_snmp_statistics/utils/: debug.c  debug.h  utils.c  utils.h
tf_snmp_22/: Makefile
tf_snmp_22/src/: CMakeLists.txt  poe_module.c  poe_module.h  snmp_module.h  snmp_utils.c  snmp_utils.h
tf_snmp_22/test/: switch.c  switch_columns.h  switch_enums.h
tf_snmp_22/test/2/: switch.c  switch.h
tf_snmp_22/test/snmp_type/1/: switch.c  switch.h
tf_snmp_22/test/tables_1/: switch.c  switch.h
tf_snmp_22/test/tables_2/: switch.h
tf_snmp_22/test/ucd_type/: switch.c  switch.h
